--- a/components/home/HomeLogos.module.css
+++ b/components/home/HomeLogos.module.css
@@ -49,12 +49,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-inline: 32px;
+  width: 160px;
 }
 
 .logo {
   height: 77px;
   width: auto;
+  max-width: 160px;
   object-fit: contain;
   /* Desktop: gris sutil con hover en color */
   opacity: 0.3;
@@ -83,10 +84,11 @@
     opacity: 1;
     filter: none;
     height: 55px;
+    max-width: 120px;
   }
 
   .logoWrap {
-    padding-inline: 24px;
+    width: 120px;
   }
 
   .strip {
